# json2csv

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: convert.rs  main.rs
src/cli/: mod.rs
src/convert/: mod.rs  tests.rs
